# ChangeLog for net-im/ejabberd
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/ejabberd/ChangeLog,v 1.87 2010/10/15 17:34:36 pva Exp $

*ejabberd-2.1.5-r2 (15 Oct 2010)

  15 Oct 2010; Peter Volkov <pva@gentoo.org> -ejabberd-2.1.5-r1.ebuild,
  +ejabberd-2.1.5-r2.ebuild:
  Another mod_srl update, drop broken, bug #341131 thank Nickolaj Stjujsckij
  for this job.

  07 Sep 2010; Peter Volkov <pva@gentoo.org> -ejabberd-2.0.5-r3.ebuild,
  -ejabberd-2.1.4.ebuild:
  Drop old and openssl-1 incompatible versions as Samuli requested.

*ejabberd-2.1.5-r1 (30 Aug 2010)

  30 Aug 2010; Peter Volkov <pva@gentoo.org> +ejabberd-2.1.5-r1.ebuild:
  Updated mod_srl, thank krigstask for this job.

  09 Aug 2010; Peter Volkov <pva@gentoo.org> ejabberd-2.1.5.ebuild,
  +files/ejabberd-2.1.5-md2-optional.patch:
  Fix openssl breakage due to missed md2 support, bug 331299, thank Rion for
  report and Samuli Suominen for quick fix.

*ejabberd-2.1.5 (05 Aug 2010)

  05 Aug 2010; Peter Volkov <pva@gentoo.org> +ejabberd-2.1.5.ebuild:
  Version bump. SSL is now required (per upstream, see release notes). Thank
  Rion for report.

  22 Jul 2010; Peter Volkov <pva@gentoo.org> ejabberd-2.1.4.ebuild,
  +files/ejabberd-2.1.4-mod_shared_roster_ldap.patch:
  Added patch for mod_shared_roster_ldap, thank Andrian Nord for report and
  fix in bug #328533!

  12 Jul 2010; Markos Chandras <hwoarang@gentoo.org> ejabberd-2.1.4.ebuild:
  Stable on amd64 wrt bug #308047

  10 Jul 2010; Raúl Porcel <armin76@gentoo.org> ejabberd-2.0.5-r3.ebuild,
  ejabberd-2.1.4.ebuild:
  Add ~sparc wrt #259802

  03 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  ejabberd-2.1.4.ebuild:
  stable x86, security bug 308047

*ejabberd-2.1.4 (07 Jun 2010)

  07 Jun 2010; Peter Volkov <pva@gentoo.org> -ejabberd-2.1.3.ebuild,
  +ejabberd-2.1.4.ebuild:
  Version bump, thank Rion for report in bug #281366
