@@ -14,6 +14,7 @@ DIST ejabberd-2.1.5.tar.gz 2278008 RMD160 7abd6bc4a03f68d03e13ee8c1ff3a5fee6098d
 DIST mod_shared_roster_ldap-0.5.1.tgz 607758 RMD160 5669a3d16fbca4d399e85a7d0dfda71643e6e2c7 SHA1 a9498d26e17752b882b3341b633d1804075d74ef SHA256 60e4ba0921d1ac65f9cca04fa2a7a3bbe3a9af52a26ad1a4fca4a3c6f1f0cc19
 DIST mod_shared_roster_ldap-0.5.3.tgz 663731 RMD160 c8905ccffe4bd99f77fe91d583502d0912b9a005 SHA1 5bb1991868341c7cfc995348747c43833820af2b SHA256 9e295065b60e5e37e839f7793503e9ae5e367c0a749e870cbbeeef3ce5609954
 EBUILD ejabberd-2.1.5-r2.ebuild 8304 RMD160 f7cc7d92284137062a7c723fd1b20866c0ec6fb7 SHA1 05025f9f61f58715b39f54e3864bdb144d74f5ee SHA256 97e3c2e59467b7855d89dbbab4234f2b967ce8a12b213332834a764d7e254a5a
+EBUILD ejabberd-2.1.5-r3.ebuild 8385 RMD160 8a69ad070aa0fe0f8fd39ad407a2547f6431af04 SHA1 65caac092cd1d3b2e9077729d79860a4c6d9d94a SHA256 896175067d95c70e5ca4b123ba836bfd0611d28b415a6ca4eecb956364c4f824
 EBUILD ejabberd-2.1.5.ebuild 8374 RMD160 ec4746817be901804b5603cb388ef7ce9cc706ed SHA1 f735ea63d287b35306878db8092b5d2c6aa2349f SHA256 f0a2fd0e5da4306a8be7f8254f5d77dfadc872cb818d8c0202366fbd16ce188f
-MISC ChangeLog 18212 RMD160 9dc61e7ef55435d7ac3314249d2b57839c804316 SHA1 cd1d37a6bd48732ff55f11da05200c86e45e84f3 SHA256 770241f8072f893389f913f3659aed99199f2b246180e3a81fdd4b62b74f104f
+MISC ChangeLog 18426 RMD160 fdb8f9a52e3b8ffae315998fd2a0d37ba0650518 SHA1 1ada99f26494a11074761e8710b050c6b45c38e8 SHA256 70ab25e64af1fa7a8286195895a930936d820742a5625219c124523f7b82f7af
 MISC metadata.xml 929 RMD160 3a456c8945da34e417ca2fb659807a280b834f85 SHA1 a7b3173f8b63655c049881629e1354c71ddd633e SHA256 4d46909fd72908dff8698bb9dfcf60132e973b28eabbfe75001397ed349ff11b
