@@ -1,6 +1,12 @@
 # ChangeLog for net-im/ejabberd
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/ejabberd/ChangeLog,v 1.87 2010/10/15 17:34:36 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ejabberd/ChangeLog,v 1.88 2010/11/18 13:26:40 pva Exp $
+
+*ejabberd-2.1.5-r3 (18 Nov 2010)
+
+  18 Nov 2010; Peter Volkov <pva@gentoo.org> +ejabberd-2.1.5-r3.ebuild:
+  Fix unix_chkpwd authentication failure (jabber owner on epam), bug
+  #345909, thank bathizte for report.
 
 *ejabberd-2.1.5-r2 (15 Oct 2010)
 
